# salsa-milk

./: .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  build.sh  gunicorn.conf.py  pyproject.toml  requirements.txt  requirements_dev.txt  salsa-milk.ipynb  salsa-milk.py  salsa-milk.sh  salsa_milk_core.py  streamlit_app.py  webapp.py
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  tests.yml
salsa_milk/: __init__.py
templates/: index.html  streamlit_footer.html  streamlit_header.html  streamlit_styles.css
tests/: conftest.py  test_cli.py  test_core.py  test_gunicorn_conf.py  test_integration.py  test_streamlit_app.py  test_version.py  test_webapp.py
